        - AdvancedLowPassFilterData -> LowPassFilterData
        - AdvancedLowPassFilterConfig -> LowPassFilterConfig
        - CHANGED data type AdvancedLowPassFilterData::cutoffFrequency uint16 -> float (truncates decimal when cast to uint16 for legacy command)
    - Added MipNodeFeatures::supportedGnssSources() to lookup supported GNSS Aiding Source options
    - Updated GnssReceiverInfo to read new receiver fw information from description field
    - Updated GPS Ionospheric Corrections alpha and beta value types to Vector
    - Automatically detect and add required parameters for save as startup, load startup, and default settings command functions
    - Fix device info not fully cleared on InertialNode::clearDeviceInfo()
    - Added support for MIP data:
        - Continuous Built-In Test (0xA0, 0x01)
        - SBAS Status (0x81,0x12) (0x91-95,0x12)
        - Calculated SBAS Correction (0x81,0x13) (0x91-95,0x13)
        - GNSS RF Error Detection (0x81,0x14) (0x91-95,0x14)
    - Added support for MIP commands:
        - Low-Pass Anti-Aliasing Filter (0x0C,0x54)
        - Reference Point Lever Arm (0x0D,0x56)

64.3.0 - 2022-06-03
- Added support for G-Link-200 6522-6001 (custom default configuration)
- Added support for MIP commands:
    - Event Support (0x0C,0x2A)
    - Event Control (0x0C,0x2B)
    - Event Trigger Status (0x0C,0x2C)
    - Event Action Status (0x0C,0x2D)
    - Event Trigger Configuration (0x0C,0x2E)
    - Event Action Configuration (0x0C,0x2F)
    - Sensor Range (0x0C,0x52)
    - Get Calibrated Sensor Ranges (0x0C,0x53)
- Added support for MIP data:
    - Event Source (0xFF,0xD0)
    - Reference Time (0xFF,0xD5)
    - Delta Reference Time (0xFF,0xD6)
    - External Timestamp (0xFF,0xD7)
    - Delta External Time (0xFF,0xD7)
    - Overrange Status (0x80,0x18)
    - System data set (0xA0)
    - Time Sync Status (0xA0,0x02)
    - GPIO State (0xA0,0x03)