@@ -384,5 +384,12 @@ namespace mscl
         //Returns:
         //    True if north compensation is supported by the Node, false otherwise.
         const bool supportsNorthCompensation() const;
+
+        //API Function: supportedLowPassFilterChannelFields
+        //    Gets the list of <MipTypes::ChannelFields> that the low-pass anti-aliasing filter can be applied to for this device.
+        //
+        //Returns:
+        //    <MipTypes::MipChannelFields> - list of supported <MipTypes::ChannelFields>.
+        MipTypes::MipChannelFields supportedLowPassFilterChannelFields() const;
     };
 }
